# SlimeShell

./: .gitignore  AGENT-PROMPT.md  AGENTS.md  DESIGN-SYSTEM.md  README.md  SLIMESHELL-PLAN.md  UI-FIX-GUIDE.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml
slimeshell/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
slimeshell/src/: App.jsx
slimeshell/src-tauri/: Cargo.toml  tauri.conf.json
slimeshell/src-tauri/capabilities/: default.json
slimeshell/src-tauri/src/: db.rs  lib.rs  models.rs
slimeshell/src-tauri/src/commands/: flipper.rs  fs.rs  mod.rs  network.rs  osint.rs  system.rs  terminal.rs  vpn.rs
slimeshell/src/components/ui/: Badge.jsx  (+10 more)
slimeshell/src/data/: payloads.json  ports.json
slimeshell/src/hooks/: useBackend.js
slimeshell/src/lib/: encoding.js  hashing.js  revshells.js  subnet.js
slimeshell/src/pages/: Bookmarks.jsx  CTFs.jsx  CTFtime.jsx  Collab.jsx  Dashboard.jsx  Diff.jsx  Encoding.jsx  Esoteric.jsx  FileAnalyzer.jsx  FlipperZero.jsx  HTTP.jsx  JWT.jsx  NetworkMap.jsx  Notes.jsx  Osint.jsx  Payloads.jsx  Profile.jsx  References.jsx  Regex.jsx  Reports.jsx  RevShell.jsx  Scripts.jsx  Settings.jsx  Terminal.jsx  Tools.jsx  Utilities.jsx  VPN.jsx  Wordlists.jsx  Writeups.jsx
slimeshell/src/store/: useAppStore.js
slimeshell/src/styles/: globals.css
src/: App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: system.rs
src/components/layout/: Sidebar.jsx  TopBar.jsx
src/components/ui/: Card.jsx
src/hooks/: useBackend.js
src/pages/: Dashboard.jsx
src/styles/: globals.css
(+3 files in other folders)
